--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
-<body style="width:75%;position: absolute;top:0%;left: 50%;transform:translate(-50%, 0%); -webkit-transform: translate(-50%,0%);">
+<body>
+    <div style="width:75%;position: absolute;top:0%;left: 50%;transform:translate(-50%, 0%); -webkit-transform: translate(-50%,0%);">
 <h1>希望の部屋</h1>
 <a href="fo.html" class="btn btn-primary" onclick="window.open('fo.html', '希望の部屋', 'width=500,height=500'); return false;">扉を開く</a>
+    </div>
 </body>
 </html>
