--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="utf8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <title>NANTAMA-VOLTAGE</title>
 </head>
-<body>
-    <div style="padding: 25%;width:75%;position: absolute;top:0%;left: 50%;transform:translate(-50%, 0%); -webkit-transform: translate(-50%,0%);">
-<h1>希望の部屋</h1>
-<a href="fo.html" class="btn btn-primary" onclick="window.open('fo.html', '希望の部屋', 'width=500,height=500'); return false;">扉を開く</a>
-    </div>
+<body style="background: black;">
+    <div style="padding: 5%;width:80%;position: absolute;top:50%;left: 50%;transform:translate(-50%, -50%); -webkit-transform: translate(-50%,-50%);">
+<div class="d-flex"><h1 class="p-2" style="color: white;">NANTAMA VOLTAGE<br>(ボーナスゲームサイト)</h1>
+    <div class="p-3 h-3 flex-fill align-self-center" style="border-right:1px solid #ccc;"></div>
+    <div height="1em" class="p-3 h-3 flex-fill align-self-center"></div>
+<div class="p-2 flex-fill align-self-center"><a href="fo.html" class="btn btn-primary" onclick="window.open('fo.html', 'BONUSGAME', 'width=800,height=800'); return false;">開く</a></div>
+</div>
+</div>
 </body>
 </html>
