--- a/fo.html
+++ b/fo.html
@@ -5,14 +5,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="tri/tripleclick.js"></script>
-
+    <title>BONUS GAME</title>
     <style>
         *{
             color: whitesmoke;
+            font-family: sans-serif;
         }
+        p{
+            font-size: 1.6em;
+        }
+
         #bg1{
             z-index: -4;
-            background-color: rgb(6, 34, 61);
+            background-color: #1c2c5f;
             width: 100%;
             height: 100%;
             position: absolute;
@@ -21,7 +26,7 @@
         }
         #bg2{
             z-index: -5;
-            background-color: rgb(255, 160, 51);
+            background-color: #ff7e5f;
             width: 100%;
             height: 100%;
             position: absolute;
@@ -45,13 +50,13 @@
     
     <div class="wrap" style="width: 80%"></div>
     <div id="fail" class="hid" style="position: absolute; top: 40%;left: 50%;-webkit-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
-        <h2 class="">失敗</h2>
-        <p id="msg"></p>
+        <h1 class="">失敗</h2>
+        <p id="msg-f"></p>
         <button id="retrybtn" class="btn btn-warning" onclick="retry()">再度挑戦</button>
     </div>
     <div id="success" class="hid" style="position: absolute; top: 40%;left: 50%;-webkit-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
-        <h2>成功</h2>
-        <p id="msg">おめでとうございます。</p>
+        <h1 id="h-success">99%クリア</h2>
+        <p id="msg-s"></p>
     </div>
 
     <div id="mainwindow">
@@ -79,15 +84,15 @@
             if($("#kw").val()=="kw"){
                 if(phase != 0){
                     $("#fail").removeClass("hid");
-                    $("#msg").text("失敗です。失敗した旨をMCにお伝えください。(この場合リトライはできません。何が悪かったか)");
+                    $("#msg-f").text("80%クリア。何かが足りていませんでした... この画面をMCにお見せください。(ここから先はリトライはできません。何が悪かったか考えてみてください。)");
                     $("#retrybtn").addClass("hid");
                 }else{
                     $("#success").removeClass("hid");
-                    $("#msg").text("成功です。おめでとうございます。");
+                    $("#msg-s").text("99%クリア。キーワードを全員で叫んだら成功です。（もうひっかけはないですよ）");
                 }
             }else{
                 $("#fail").removeClass("hid");
-                $("#msg").text("解答が間違っています。");
+                $("#msg-f").text("解答が間違っています。");
             }
             str = "";
             ent = 0;
@@ -120,6 +125,9 @@
             }else if(event.keyCode == "13"){
                 ent += 1
                 if(ent >= 4 && str == "70798269866982"){
+                    $("#h-success").text("成功！！");
+                    $("#msg-s").text("100%クリア。あなた方はクラス対抗でありながらその垣根を越え互いに協力し合いました。特性を伸ばして協力しながら、時に競い合う。そんな私たちでありたいですね。お疲れ様でした。全クラスに100pt差し上げます。")
+                }else if(ent >= 4 && str == "82698384658284"){
                     retry();
                 }
             } else { str += String(event.keyCode); }
