--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <title>NANTAMA-VOLTAGE</title>
-    <meta name=”description” content="This is the bonus stage. EGATLOV AMATNAN">
+    <meta name=”description” content="NANTAMA VOLTAGE is the bonus stage.">
 </head>
 <body style="background: black;">
     <div style="padding: 5%;width:80%;position: absolute;top:50%;left: 50%;transform:translate(-50%, -50%); -webkit-transform: translate(-50%,-50%);">
