--- a/controller.html
+++ b/controller.html
@@ -85,7 +85,7 @@
         <button id="retrybtn" class="btn btn-warning" onclick="retry()">再度挑戦</button>
     </div>
     <div id="success" class="hid" style="position: absolute; top: 40%;left: 50%;-webkit-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
-        <h1 id="h-success">99%クリア</h2>
+        <h1 id="h-success"></h2>
         <p id="msg-s"></p>
     </div>
 
@@ -108,6 +108,7 @@
     <script>
         let phase = $(".cloud").length;
         let life = 2;
+        let flag = False;
         function judge(){
             console.log($("#kw").val());
             $("#mainwindow").addClass("hid");
@@ -121,6 +122,7 @@
                         $("#fail").removeClass("hid");
                         $("#msg-f").text("これでは発動はできない。もう一度考え直してくれ。セキュリティによりあと一回のみ送信が可能だ。");
                         $("#retrybtn").removeClass("hid");
+                        flag = True;
                     } else {
                         $("#fail").removeClass("hid");
                         $("#msg-f").text("これでは発動はできない。もうこの端末上で送信はできない");
