--- a/controller.html
+++ b/controller.html
@@ -120,7 +120,7 @@
                 if(phase != 0){
                     if(flag == 0){
                         $("#fail").removeClass("hid");
-                        $("#msg-f").text("これでは発動はできない。もう一度考え直してくれ。セキュリティによりあと一回のみ送信が可能だ。");
+                        $("#msg-f").text("これでは発動はできない。もう一度考え直してくれ。現状はCLOUDYだ。セキュリティによりあと一回のみ送信が可能だ。");
                         $("#retrybtn").removeClass("hid");
                         flag = 1;
                     } else {
