--- a/controller.html
+++ b/controller.html
@@ -136,7 +136,7 @@
                     }
                 }else{
                     $("#success").removeClass("hid");
-                    $("#h-success").text("あとちょっと！");
+                    $("#h-success").text("it's a sunny day");
                     $("#msg-s").text("まだまだ君たちのボルテージが足りない、、最後に学年のみんなでキーワードを叫んでくれ。");
                     setTimeout(() => {
                         $("#h-success").text("成功！！");
