--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="d-flex"><h1 class="p-2" style="color: white;">NANTAMA VOLTAGE<br>(ヒミツ兵器サイト)</h1>
             <div class="p-3 h-3 flex-fill align-self-center" style="border-right:1px solid #ccc;"></div>
             <div height="1em" class="p-3 h-3 flex-fill align-self-center"></div>
-            <div class="p-2 flex-fill align-self-center"><a href="controller.html" class="btn btn-primary" onclick="window.open('controller.html', 'CONTROLLER', 'width=800,height=800'); return false;">コントローラーを開く</a></div>
+            <div class="p-2 flex-fill align-self-center"><a href="controller.html" class="btn btn-primary" onclick="window.open("https://taikoclub.pythonanywhere.com/f", 'CONTROLLER', 'width=800,height=800'); return false;">コントローラーを開く</a></div>
         </div>
     </div>
     </div>
