--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="tri/tripleclick.js"></script>
-    <title>NANTAMA-VOLTAGE</title>
+    <title>ヒミツヘイキ</title>
     
     <style>
         .shelf{
@@ -70,7 +70,7 @@
     </div>
     <div style="z-index: -2;">
     <div style="padding: 5%;width:80%;position: absolute;top:50%;left: 50%;transform:translate(-50%, -50%); -webkit-transform: translate(-50%,-50%);">
-        <div class="d-flex"><h1 class="p-2" style="color: white;">NANTAMA VOLTAGE<br>(ヒミツ兵器サイト)</h1>
+        <div class="d-flex"><h1 class="p-2" style="color: white;">VOLTAGE<br>(ヒミツ兵器サイト)</h1>
             <div class="p-3 h-3 flex-fill align-self-center" style="border-right:1px solid #ccc;"></div>
             <div height="1em" class="p-3 h-3 flex-fill align-self-center"></div>
             <div class="p-2 flex-fill align-self-center"><a href="controller.html" class="btn btn-primary">コントローラーを開く</a></div>
