--- a/controller.html
+++ b/controller.html
@@ -167,6 +167,7 @@
             if (phase == 0){
                 $("#send").removeClass("btn-primary");
                 $("#send").addClass("btn-danger");
+                alert("画面内がSUNNYになりました。");
             }
         });
         let str = "";
