--- a/musiclooper.html
+++ b/musiclooper.html
@@ -3,6 +3,6 @@
     <title>musiclooper</title>
   </head>
 <body>
-  <audio controls src="static/elégant_Para_mix_loop.mp3"></audio>
+  <audio controls src="elégant_Para_mix_loop.mp3"></audio>
 </body>
 </html>
